syntax = "proto3";

package grpc.example.echo;
option go_package = "pb";

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

service Echo {
    rpc UnaryEcho (EchoRequest) returns (EchoResponse) {}
    rpc ServerStreamingEcho (EchoRequest) returns (stream EchoResponse) {}
    rpc ClientStreamingEcho (stream EchoRequest) returns (EchoResponse) {}
    rpc BidirectionalStreamingEcho (stream EchoRequest) returns (stream EchoResponse) {}
}
